--- a/apps/angular/src/theme/components.css
+++ b/apps/angular/src/theme/components.css
@@ -9,6 +9,8 @@
 	font-size: var(--font-size-l);
 	color: var(--primary-contrast-color);
 	line-height: calc(var(--font-size-l) * 1.25);
+
+	/* Overriding library styles */
 	font-weight: 100 !important;
 }
 
@@ -16,5 +18,4 @@
 	font-size: var(--font-size-m);
 	color: var(--primary-contrast-color);
 	line-height: calc(var(--font-size-m) * 1.25);
-	margin: 0 !important;
 }
